# agent-builder

./: .gitignore  API_ENDPOINTS.md  BEDROCK_SETUP.md  COMPLETION_EVALUATION.md  CONFIGURATION.md  PYDANTIC_OUTPUT_PARSER_IMPROVEMENTS.md  RABBITMQ_MESSAGE_STRUCTURE.md  README.md  SIMPLE_VS_TOOLS.md  example_completion_agent.py  main.py  pyproject.toml  setup.py  streamlit_app.py  test_agent_fix.py  test_api.py  test_bedrock_setup.py  test_casual_chat.py  test_doc_index_implementations.py  test_imports.py  test_prompt_refactor.py  test_rest_api_tools.py  test_simple_vs_tools.py  test_single_shot_agent.py  test_tools.py
app/: __init__.py  server.py
app/agents/: registry.py
app/memory/: session_memory.py
app/models/: __init__.py  schemas.py
app/providers/: __init__.py  llm.py
app/services/: completion_evaluation.py  doc_index.py  doc_index_bedrock.py  doc_index_factory.py  doc_index_interface.py  rabbitmq_service.py  schema_parser.py
app/tools/: __init__.py  calculator.py  file_operations.py  registry.py  rest_api.py
doc/: no_internet_onnection.txt  unable_connect_to_server.txt
task_executor_agent/: README.md  __init__.py  config.py
task_executor_agent/agent/: __init__.py  input_mapping_agent.py  task_agent.py  task_selection_agent.py
task_executor_agent/api/: __init__.py  endpoints.py
task_executor_agent/mapping/: __init__.py
task_executor_agent/models/: __init__.py  schemas.py
task_executor_agent/tools/: __init__.py  http_client.py  langchain_tools.py  langchain_tools_mock.py
test_prompts/: extract_inputs1.txt  problem_understanding.txt
